update policy doc

--- a/index.html
+++ b/index.html
@@ -853,13 +853,13 @@
               LEGAL DOCUMENTS
             </h6>
             <p class="mb-4">
-              <a href="#!" class="text-white">Privacy Policy</a>
+              <a target="_blank" href="https://www.privacypolicygenerator.info/live.php?token=tdAg0WxGnzgiK08G4KfJHTu6ZvnDqgWN" class="text-white">Privacy Policy</a>
             </p>
             <p class="mb-4">
-              <a href="#!" class="text-white">Terms and condition</a>
+              <a target="_blank" href="https://www.termsandconditionsgenerator.com/live.php?token=uuOjUQkEJ947Cy4EAhyTHmeLSbU7TiCH" class="text-white">Terms and condition</a>
             </p>
             <p class="mb-4">
-              <a href="#!" class="text-white">Anti Copyright</a>
+              <a target="_blank" href="https://www.disclaimergenerator.net/live.php?token=scBBe72VWbq3AyE3Y0TdQKc4Q2NrFXik" class="text-white">Anti Copyright</a>
             </p>
             <p>
               <a href="#!" class="text-white">Creative Commons</a>
