--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 </head>
 
 <body class="font-[poppins]">
+  <!-- preloader -->
+  <div>
+    <img id="preload" class="w-full h-full z-[100] fixed-top" src="img/preload.gif" alt="">
+  </div>
   <!-- Back to top button -->
   <button type="button" data-mdb-ripple="true" data-mdb-ripple-color="light"
     class="fixed inline-block p-5 bg-sky-600 text-white font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-sky-700 hover:shadow-lg focus:bg-sky-900 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-sky-800 active:shadow-lg transition duration-150 ease-in-out bottom-5 right-5"
@@ -319,7 +323,37 @@
             <p class="text-gray-500 capitalize grid justify-center py-2">University Admission</p>
 
           </li>
+          <li class="md:w-1/3 w-full m-2 wow slide-in-up" data-wow-duration="2s">
+            <a href="https://asif-the-wolion.github.io/Khan-veg-farm-v2.github.io/" target="_blank" rel="noopener noreferrer">
+              <img src="img/kvf3.png"
+                class=" border-green-800 border-2  hover:border-sky-900 transition-all ease-in-out delay-100 hover:scale-110 overflow-hidden"
+                alt="">
+            </a>
+            <p class="text-gray-500 capitalize grid justify-center py-2">Blog with product- Khan veg farm v2</p>
+
+          </li>
         </ul>
+
+          <ul class="md:flex grid justify-items-center justify-center ">
+            <li class="md:w-1/3 w-full m-2 wow slide-in-up" data-wow-duration="2s">
+              <a href="https://asifnational.blogspot.com/" target="_blank" rel="noopener noreferrer">
+                <img src="img/as.png"
+                  class=" border-orange-800 border-2  hover:border-sky-900 transition-all ease-in-out delay-100 hover:scale-110 overflow-hidden"
+                  alt="">
+              </a>
+              <p class="text-gray-500 capitalize grid justify-center py-2">My fav cv template</p>
+  
+            </li>
+            <li class="md:w-1/3 w-full m-2 wow slide-in-up" data-wow-duration="2s">
+              <a href="https://asifnational.blogspot.com/" target="_blank" rel="noopener noreferrer">
+                <img src="img/blog.png"
+                  class=" border-orange-800 border-2  hover:border-sky-900 transition-all ease-in-out delay-100 hover:scale-110 overflow-hidden"
+                  alt="">
+              </a>
+              <p class="text-gray-500 capitalize grid justify-center py-2">Blogger website for my blogs</p>
+  
+            </li>
+            </ul>
 
       </div>
     </div>
@@ -427,7 +461,7 @@
                 <div class="bg-sky-600 h-1 " style="width: 55%"></div>
               </div>
             </div>
-            <div id="CSS Preprocessors/ PostCSS" class="mb-5">
+            <div id="CSS Preprocessors/ PostCSS">
               <div class="flex justify-between px-10">
                 <p>CSS Preprocessors/ PostCSS</p>
                 <p>55%</p>
@@ -436,6 +470,25 @@
                 <div class="bg-sky-600 h-1 " style="width: 55%"></div>
               </div>
             </div>
+            <div id="wordpress">
+              <div class="flex justify-between px-10">
+                <p>wordpress</p>
+                <p>65%</p>
+              </div>
+              <div class=" bg-gray-200 h-1 mx-10">
+                <div class="bg-sky-600 h-1 " style="width: 55%"></div>
+              </div>
+            </div>
+            <div id="Blogger" class="mb-5">
+              <div class="flex justify-between px-10">
+                <p>Blogger Theme Development</p>
+                <p>85%</p>
+              </div>
+              <div class=" bg-gray-200 h-1 mx-10">
+                <div class="bg-sky-600 h-1 " style="width: 55%"></div>
+              </div>
+            </div>
+
           </div>
         </div>
         <div id="backend">
@@ -939,6 +992,13 @@
       delay: 10,
       time: 1000
     });
+  </script>
+  <!-- preload -->
+  <script>
+    let load = document.getElementById("preload");
+    window.addEventListener("load", function () {
+      preload.style.display="none";
+      })
   </script>
   <!-- tailwind js -->
   <script src="js/index.min.js"></script>
