--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
 <body class="font-[poppins]">
   <!-- preloader -->
-  <div>
-    <img id="preload" class="w-full h-full z-[100] fixed-top" src="img/preload.gif" alt="">
-  </div>
+  <!-- <div>
+    <img id="preload" class="w-full h-screen z-[100] fixed-top" src="img/preload.gif" alt="">
+  </div> -->
   <!-- Back to top button -->
   <button type="button" data-mdb-ripple="true" data-mdb-ripple-color="light"
     class="fixed inline-block p-5 bg-sky-600 text-white font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-sky-700 hover:shadow-lg focus:bg-sky-900 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-sky-800 active:shadow-lg transition duration-150 ease-in-out bottom-5 right-5"
@@ -109,7 +109,7 @@
   <!-- About -->
   <section id="about" class="mt-10 py-16 px-10">
     <div class="md:flex">
-      <div id="myimg" class="md:block hidden w-1/2 px-10">
+      <div id="myimg" class="md:block hidden w-1/2 h-full px-10">
         <img class="wow fade-in-up bg-sky-400 w-full h-full rounded-xl " src="img/meinbike.png" alt="">
       </div>
 
@@ -122,11 +122,15 @@
           </p>
           <p class="py-5 wow slide-in-up" data-wow-duration="2s">
             I am an expert at google business profiles and know how to digitally catapult your business into orbit! If you need any assistance, ping me. I help people who want to make their business an actual commercial success and money-making machine.          
+            <button id="aboutmebtn" class="p-1 text-sky-500">
+              <p>more</p>
+            </button> 
           </p>
-          <p class="wow slide-in-up" data-wow-duration="2s">
-            <!-- I love learning new things and making them work for me. I'm a coder, blogger, and an expert with google business profiles. And as if mentioned above I'm a Front End Developer with 5 years of experience building and maintaining responsive websites in the recruiting industry.             -->
-            <a href="" class="p-1 text-sky-500">more</a>
-          </p>
+          <!-- <div class="wow slide-in-up" data-wow-duration="2s">
+            <p>
+              I love learning new things and making them work for me. I'm a coder, blogger, and an expert with google business profiles. And as if mentioned above I'm a Front End Developer with 5 years of experience building and maintaining responsive websites in the recruiting industry.            
+            </p>
+          </div> -->
         </div>
         <div id="myimg" class="md:hidden px-10 pt-5">
           <img class=" bg-sky-400 w-full h-full rounded-xl wow slide-in-up" data-wow-duration="2s"
@@ -156,6 +160,16 @@
         </div>
       </div>
     </div>
+    <div id="aboutmep" class="text-gray-500 text-justify pt-10 hidden">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quia nam ipsum aliquam voluptates laudantium voluptatum debitis explicabo, impedit dolorem voluptatem nostrum sapiente suscipit cupiditate molestiae, dignissimos consectetur! Corrupti impedit dolorum accusamus facere harum excepturi minima doloremque. Eveniet ipsum quas pariatur eum reprehenderit perspiciatis accusantium doloremque expedita natus. Architecto veniam aliquam ipsum fugit natus placeat molestiae dolorem! Veniam voluptate asperiores aperiam voluptatem omnis, a repudiandae eius. Officiis aliquam autem veniam eligendi repellat tenetur reprehenderit expedita ad sit, voluptatum rerum vitae natus delectus. Dolor repellat dolores temporibus provident, debitis, ex quasi et molestiae a corporis eius quaerat ab dolorem eaque consequatur!</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, vel. Velit dolor molestiae accusantium, autem sint dolorum dolorem. Facilis porro nesciunt sit a corrupti nulla, quidem, nam mollitia, enim aspernatur necessitatibus voluptatum saepe voluptas eligendi placeat tempora eveniet ut at. Cum nobis harum autem nihil dolor nostrum eius sunt commodi repellendus! Perferendis itaque unde amet quos. Molestias distinctio quibusdam deleniti, veritatis iure quisquam. Eos enim dolorem harum quam iste repudiandae veniam provident veritatis sit perspiciatis repellendus ad inventore cumque modi neque quia cupiditate blanditiis numquam asperiores, magni officiis itaque dolorum sint. Nulla velit voluptates veniam quam hic tenetur earum exercitationem!</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, vel. Velit dolor molestiae accusantium, autem sint dolorum dolorem. Facilis porro nesciunt sit a corrupti nulla, quidem, nam mollitia, enim aspernatur necessitatibus voluptatum saepe voluptas eligendi placeat tempora eveniet ut at. Cum nobis harum autem nihil dolor nostrum eius sunt commodi repellendus! Perferendis itaque unde amet quos. Molestias distinctio quibusdam deleniti, veritatis iure quisquam. Eos enim dolorem harum quam iste repudiandae veniam provident veritatis sit perspiciatis repellendus ad inventore cumque modi neque quia cupiditate blanditiis numquam asperiores, magni officiis itaque dolorum sint. Nulla velit voluptates veniam quam hic tenetur earum exercitationem!</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, vel. Velit dolor molestiae accusantium, autem sint dolorum dolorem. Facilis porro nesciunt sit a corrupti nulla, quidem, nam mollitia, enim aspernatur necessitatibus voluptatum saepe voluptas eligendi placeat tempora eveniet ut at. Cum nobis harum autem nihil dolor nostrum eius sunt commodi repellendus! Perferendis itaque unde amet quos. Molestias distinctio quibusdam deleniti, veritatis iure quisquam. Eos enim dolorem harum quam iste repudiandae veniam provident veritatis sit perspiciatis repellendus ad inventore cumque modi neque quia cupiditate blanditiis numquam asperiores, magni officiis itaque dolorum sint. Nulla velit voluptates veniam quam hic tenetur earum exercitationem!
+        <button id="aboutmebtnhide">
+          <p class="text-sky-500">see less</p>
+        </button>
+      </p>
+    </div>
   </section>
   <!-- education -->
   <section id="education" class="pb-20 font-[poppins] px-10">
@@ -170,9 +184,7 @@
     </p>
     <ul class="
     nav nav-tabs nav-justified
-    flex flex-col
-    md:flex-row
-    flex-wrap
+    flex 
     list-none
     border-b-0
     pl-0
@@ -184,7 +196,7 @@
         w-full
         block
         font-medium
-        text-xl
+        text-sm
         leading-tight
         uppercase
         border-x-0 border-t-0 border-b-2 border-transparent
@@ -203,7 +215,7 @@
         w-full
         block
         font-medium
-        text-xl
+        text-sm
         leading-tight
         uppercase
         border-x-0 border-t-0 border-b-2 border-transparent
@@ -221,7 +233,7 @@
         w-full
         block
         font-medium
-        text-xl
+        text-sm
         leading-tight
         uppercase
         border-x-0 border-t-0 border-b-2 border-transparent
@@ -336,7 +348,7 @@
 
           <ul class="md:flex grid justify-items-center justify-center ">
             <li class="md:w-1/3 w-full m-2 wow slide-in-up" data-wow-duration="2s">
-              <a href="https://asifnational.blogspot.com/" target="_blank" rel="noopener noreferrer">
+              <a href="https://wolionknight.github.io/asifkhan.github.io/" target="_blank" rel="noopener noreferrer">
                 <img src="img/as.png"
                   class=" border-orange-800 border-2  hover:border-sky-900 transition-all ease-in-out delay-100 hover:scale-110 overflow-hidden"
                   alt="">
@@ -504,10 +516,10 @@
             <div id="Django" class="">
               <div class="flex justify-between px-10">
                 <p>Django</p>
-                <p>20%</p>
+                <p class="animate-pulse">learning</p>
               </div>
               <div class=" bg-gray-200 h-1 mx-10">
-                <div class="bg-sky-600 h-1 " style="width: 75%"></div>
+                <div class="bg-sky-600 h-1 " style="width: 0%"></div>
               </div>
             </div>
           </div>
@@ -540,10 +552,28 @@
                 <div class="bg-sky-600 h-1 " style="width: 40%"></div>
               </div>
             </div>
+            <div id="Keyword Research" class="">
+              <div class="flex justify-between px-10">
+                <p>Keyword Research</p>
+                <p>60%</p>
+              </div>
+              <div class=" bg-gray-200 h-1 mx-10">
+                <div class="bg-sky-600 h-1 " style="width: 30%"></div>
+              </div>
+            </div>
+            <div id="Analytics Skills" class="">
+              <div class="flex justify-between px-10">
+                <p>Analytics Skills</p>
+                <p>50%</p>
+              </div>
+              <div class=" bg-gray-200 h-1 mx-10">
+                <div class="bg-sky-600 h-1 " style="width: 50%"></div>
+              </div>
+            </div>
             <div id="Local SEO" class="">
               <div class="flex justify-between px-10">
                 <p>Local SEO</p>
-                <p>30%</p>
+                <p>60%</p>
               </div>
               <div class=" bg-gray-200 h-1 mx-10">
                 <div class="bg-sky-600 h-1 " style="width: 30%"></div>
@@ -552,7 +582,7 @@
           </div>
         </div>
         <div id="Content Creating">
-          <div id="contbtn" class="flex justify-between px-10">
+          <div id="contbtn" class="flex justify-between px-10 pb-5">
             <button class="">Content Creating</button>
             <button>
               <!-- <i class="fa-solid fa-circle-info text-sky-500 text-xl"></i> -->
@@ -586,6 +616,44 @@
               </div>
               <div class=" bg-gray-200 h-1 mx-10">
                 <div class="bg-sky-600 h-1 " style="width: 60%"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="future-add">
+          <div id="learningnow" class="flex justify-between px-10 pb-5">
+            <button class="pr-24 md:pr-0">Learnign Now</button>
+            <button>
+              <ion-icon name="information-circle-outline"
+                class=" hover:text-sky-200 active:text-sky-700 text-sky-500 items-center grid text-2xl"></ion-icon>
+            </button>
+          </div>
+          <div id="learncntnt" class="hidden mb-5">
+            <div id="Django" class="">
+              <div class="flex justify-between px-10">
+                <p>Django</p>
+                <p>learning</p>
+              </div>
+              <div class=" bg-gray-200 h-1 mx-10">
+                <div class="bg-sky-600 h-1 " style="width: 0%"></div>
+              </div>
+            </div>
+            <div id="React js" class="">
+              <div class="flex justify-between px-10">
+                <p>React js</p>
+                <p>learning</p>
+              </div>
+              <div class=" bg-gray-200 h-1 mx-10">
+                <div class="bg-sky-600 h-1 " style="width: 0%"></div>
+              </div>
+            </div>
+            <div id="Next js" class="">
+              <div class="flex justify-between px-10">
+                <p>Next js</p>
+                <p>learning</p>
+              </div>
+              <div class=" bg-gray-200 h-1 mx-10">
+                <div class="bg-sky-600 h-1 " style="width: 0%"></div>
               </div>
             </div>
           </div>
@@ -972,6 +1040,9 @@
   <!-- End project-->
 
   <!-- js files -->
+
+  <!-- toggle js  -->
+  <script src="js/toggle.js"></script>
   <!-- typed js -->
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
