--- a/index.html
+++ b/index.html
@@ -395,19 +395,19 @@
             <div id="html">
               <div class="flex justify-between px-10">
                 <p>html 5</p>
-                <p>70%</p>
+                <p>80%</p>
               </div>
               <div class=" bg-gray-200 h-1 mx-10">
-                <div class="bg-sky-600 h-1 " style="width: 75%"></div>
+                <div class="bg-sky-600 h-1 " style="width: 80%"></div>
               </div>
             </div>
             <div id="css">
               <div class="flex justify-between px-10">
                 <p>css 3</p>
-                <p>70%</p>
+                <p>60%</p>
               </div>
               <div class=" bg-gray-200 h-1 mx-10">
-                <div class="bg-sky-600 h-1 " style="width: 75%"></div>
+                <div class="bg-sky-600 h-1 " style="width: 60%"></div>
               </div>
             </div>
             <div id="Tailwindcss">
@@ -431,19 +431,19 @@
             <div id="javascript">
               <div class="flex justify-between px-10">
                 <p>javascript</p>
-                <p>70%</p>
+                <p>40%</p>
               </div>
               <div class=" bg-gray-200 h-1 mx-10">
-                <div class="bg-sky-600 h-1 " style="width: 75%"></div>
+                <div class="bg-sky-600 h-1 " style="width: 45%"></div>
               </div>
-            </div>
-            <div id="React Js">
+            </div>            
+            <div id="jquery">
               <div class="flex justify-between px-10">
-                <p>React Js</p>
-                <p>5%</p>
+                <p>jquery</p>
+                <p>50%</p>
               </div>
               <div class=" bg-gray-200 h-1 mx-10">
-                <div class="bg-sky-600 h-1 " style="width: 5%"></div>
+                <div class="bg-sky-600 h-1 " style="width: 50%"></div>
               </div>
             </div>
             <div id="Git">
@@ -488,16 +488,16 @@
                 <p>65%</p>
               </div>
               <div class=" bg-gray-200 h-1 mx-10">
-                <div class="bg-sky-600 h-1 " style="width: 55%"></div>
+                <div class="bg-sky-600 h-1 " style="width: 65%"></div>
               </div>
             </div>
             <div id="Blogger" class="mb-5">
               <div class="flex justify-between px-10">
-                <p>Blogger Theme Development</p>
+                <p>Blogger Theme customization</p>
                 <p>85%</p>
               </div>
               <div class=" bg-gray-200 h-1 mx-10">
-                <div class="bg-sky-600 h-1 " style="width: 55%"></div>
+                <div class="bg-sky-600 h-1 " style="width: 85%"></div>
               </div>
             </div>
 
@@ -558,7 +558,7 @@
                 <p>60%</p>
               </div>
               <div class=" bg-gray-200 h-1 mx-10">
-                <div class="bg-sky-600 h-1 " style="width: 30%"></div>
+                <div class="bg-sky-600 h-1 " style="width: 60%"></div>
               </div>
             </div>
             <div id="Analytics Skills" class="">
@@ -576,7 +576,7 @@
                 <p>60%</p>
               </div>
               <div class=" bg-gray-200 h-1 mx-10">
-                <div class="bg-sky-600 h-1 " style="width: 30%"></div>
+                <div class="bg-sky-600 h-1 " style="width: 60%"></div>
               </div>
             </div>
           </div>
