--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
             <p class="capitalize text-lg">i am <span class="ainput md:text-6xl"></span> </p>
           </div>
           <div id="socialco" class="flex space-x-5 text-sm pt-5 md:pt-5">
-            <p class=""><a href="https://www.facebook.com/thewolion" target="_blank" rel="noopener noreferrer"><i
+            <p class=""><a href="https://www.facebook.com/nationalasif" target="_blank" rel="noopener noreferrer"><i
                   class="fa-brands fa-facebook-f hover:scale-150 hover:text-sky-500"></i></a></p>
-            <p class=""><a href="http://" target="_blank" rel="noopener noreferrer"><i
+            <p class=""><a href="https://twitter.com/thewolion" target="_blank" rel="noopener noreferrer"><i
                   class="fa-brands fa-twitter hover:scale-150 hover:text-sky-500"></i></a></p>
-            <p class=""><a href="http://" target="_blank" rel="noopener noreferrer"><i
+            <p class=""><a href="https://www.instagram.com/wolion1/" target="_blank" rel="noopener noreferrer"><i
                   class="fa-brands fa-instagram hover:scale-150 hover:text-sky-500"></i></a></p>
-            <p class=""><a href="http://" target="_blank" rel="noopener noreferrer"><i
+            <p class=""><a href="mailto:thewolion@gmail.com" target="_blank" rel="noopener noreferrer"><i
                   class="fa-brands fa-google hover:scale-150 hover:text-sky-500"></i></a></p>
           </div>
           <div id="cv">
@@ -141,21 +141,21 @@
           <!-- facebook -->
           <p
             class="bg-white text-sky-500 px-4 py-2 hover:text-white hover:bg-sky-500 border-sky-500 border-2 rounded-full hover:animate-bounce">
-            <a href="https://www.facebook.com/thewolion" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://www.facebook.com/nationalasif" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
           </p>
           <!-- twitter -->
           <p
             class="bg-white text-sky-500 px-3 py-2 hover:text-white hover:bg-sky-500 border-sky-500 border-2 rounded-full hover:animate-bounce">
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
+            <a href="http://https://twitter.com/thewolion" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
           </p>
           <!-- instagram -->
           <p
             class="bg-white text-sky-500 px-3 py-2 hover:text-white hover:bg-sky-500 border-sky-500 border-2 rounded-full hover:animate-bounce">
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+            <a href="http://https://www.instagram.com/wolion1/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
           </p>
           <p
             class="bg-white text-sky-500 px-3 py-2 hover:text-white hover:bg-sky-500 border-sky-500 border-2 rounded-full hover:animate-bounce">
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-google"></i></a>
+            <a href="mailto:thewolion@gmail.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-google"></i></a>
           </p>
         </div>
       </div>
@@ -830,7 +830,7 @@
         </div>
         <div class="flex justify-center ">
           <!-- facebook -->
-          <a href="https://www.facebook.com/thewolion" class="mr-6 text-white hover:text-blue-500">
+          <a href="https://www.facebook.com/nationalasif" class="mr-6 text-white hover:text-blue-500">
             <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="facebook-f" class="w-2.5" role="img"
               xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
               <path fill="currentColor"
@@ -839,7 +839,7 @@
             </svg>
           </a>
           <!-- twitter -->
-          <a href="#!" class="mr-6 text-white hover:text-sky-500">
+          <a href="https://twitter.com/thewolion" class="mr-6 text-white hover:text-sky-500">
             <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="twitter" class="w-4" role="img"
               xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
               <path fill="currentColor"
@@ -848,7 +848,7 @@
             </svg>
           </a>
           <!-- google -->
-          <a href="#!" class="mr-6 text-white hover:text-blue-600">
+          <a href="mailto:thewolion@gmail.com" class="mr-6 text-white hover:text-blue-600">
             <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="google" class="w-3.5" role="img"
               xmlns="http://www.w3.org/2000/svg" viewBox="0 0 488 512">
               <path fill="currentColor"
@@ -857,7 +857,7 @@
             </svg>
           </a>
           <!-- insta -->
-          <a href="#!" class="mr-6 text-white hover:text-pink-500">
+          <a href="https://www.instagram.com/wolion1/" class="mr-6 text-white hover:text-pink-500">
             <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="instagram" class="w-3.5" role="img"
               xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
               <path fill="currentColor"
@@ -866,7 +866,7 @@
             </svg>
           </a>
           <!-- linkdin -->
-          <a href="#!" class="mr-6 text-white hover:text-blue-700">
+          <a href="https://www.linkedin.com/in/thewolion/" class="mr-6 text-white hover:text-blue-700">
             <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin-in" class="w-3.5" role="img"
               xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
               <path fill="currentColor"
@@ -875,14 +875,14 @@
             </svg>
           </a>
           <!-- github -->
-          <a href="#!" class="text-white hover:text-gray-500">
+          <!-- <a href="" class="text-white hover:text-gray-500">
             <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="github" class="w-4" role="img"
               xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
               <path fill="currentColor"
                 d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z">
               </path>
             </svg>
-          </a>
+          </a> -->
         </div>
       </div>
       <!--  -->
@@ -891,7 +891,7 @@
           <div class="grid md:grid-cols-3 gird-cols-1 gap-4 flex justify-center items-center">
             <div class="md:ml-auto md:mb-6">
               <p class="">
-                <strong>Sign up for our newsletter</strong>
+                <strong>connect with me</strong>
               </p>
             </div>
 
@@ -939,12 +939,6 @@
           md:justify-start
              text-sky-500
         ">
-              <!-- <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="cubes" class="w-4 mr-3" role="img"
-            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-            <path fill="currentColor"
-              d="M488.6 250.2L392 214V105.5c0-15-9.3-28.4-23.4-33.7l-100-37.5c-8.1-3.1-17.1-3.1-25.3 0l-100 37.5c-14.1 5.3-23.4 18.7-23.4 33.7V214l-96.6 36.2C9.3 255.5 0 268.9 0 283.9V394c0 13.6 7.7 26.1 19.9 32.2l100 50c10.1 5.1 22.1 5.1 32.2 0l103.9-52 103.9 52c10.1 5.1 22.1 5.1 32.2 0l100-50c12.2-6.1 19.9-18.6 19.9-32.2V283.9c0-15-9.3-28.4-23.4-33.7zM358 214.8l-85 31.9v-68.2l85-37v73.3zM154 104.1l102-38.2 102 38.2v.6l-102 41.4-102-41.4v-.6zm84 291.1l-85 42.5v-79.1l85-38.8v75.4zm0-112l-102 41.4-102-41.4v-.6l102-38.2 102 38.2v.6zm240 112l-85 42.5v-79.1l85-38.8v75.4zm0-112l-102 41.4-102-41.4v-.6l102-38.2 102 38.2v.6z">
-            </path>
-          </svg> -->
               <p class="text-3xl text-white capitalize font-light font-[Yellowtail]">Asif Khan</p>
             </h6>
             <p class="text-justify">
