--- a/index.html
+++ b/index.html
@@ -160,15 +160,55 @@
         </div>
       </div>
     </div>
-    <div id="aboutmep" class="text-gray-500 text-justify pt-10 hidden">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quia nam ipsum aliquam voluptates laudantium voluptatum debitis explicabo, impedit dolorem voluptatem nostrum sapiente suscipit cupiditate molestiae, dignissimos consectetur! Corrupti impedit dolorum accusamus facere harum excepturi minima doloremque. Eveniet ipsum quas pariatur eum reprehenderit perspiciatis accusantium doloremque expedita natus. Architecto veniam aliquam ipsum fugit natus placeat molestiae dolorem! Veniam voluptate asperiores aperiam voluptatem omnis, a repudiandae eius. Officiis aliquam autem veniam eligendi repellat tenetur reprehenderit expedita ad sit, voluptatum rerum vitae natus delectus. Dolor repellat dolores temporibus provident, debitis, ex quasi et molestiae a corporis eius quaerat ab dolorem eaque consequatur!</p>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, vel. Velit dolor molestiae accusantium, autem sint dolorum dolorem. Facilis porro nesciunt sit a corrupti nulla, quidem, nam mollitia, enim aspernatur necessitatibus voluptatum saepe voluptas eligendi placeat tempora eveniet ut at. Cum nobis harum autem nihil dolor nostrum eius sunt commodi repellendus! Perferendis itaque unde amet quos. Molestias distinctio quibusdam deleniti, veritatis iure quisquam. Eos enim dolorem harum quam iste repudiandae veniam provident veritatis sit perspiciatis repellendus ad inventore cumque modi neque quia cupiditate blanditiis numquam asperiores, magni officiis itaque dolorum sint. Nulla velit voluptates veniam quam hic tenetur earum exercitationem!</p>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, vel. Velit dolor molestiae accusantium, autem sint dolorum dolorem. Facilis porro nesciunt sit a corrupti nulla, quidem, nam mollitia, enim aspernatur necessitatibus voluptatum saepe voluptas eligendi placeat tempora eveniet ut at. Cum nobis harum autem nihil dolor nostrum eius sunt commodi repellendus! Perferendis itaque unde amet quos. Molestias distinctio quibusdam deleniti, veritatis iure quisquam. Eos enim dolorem harum quam iste repudiandae veniam provident veritatis sit perspiciatis repellendus ad inventore cumque modi neque quia cupiditate blanditiis numquam asperiores, magni officiis itaque dolorum sint. Nulla velit voluptates veniam quam hic tenetur earum exercitationem!</p>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, vel. Velit dolor molestiae accusantium, autem sint dolorum dolorem. Facilis porro nesciunt sit a corrupti nulla, quidem, nam mollitia, enim aspernatur necessitatibus voluptatum saepe voluptas eligendi placeat tempora eveniet ut at. Cum nobis harum autem nihil dolor nostrum eius sunt commodi repellendus! Perferendis itaque unde amet quos. Molestias distinctio quibusdam deleniti, veritatis iure quisquam. Eos enim dolorem harum quam iste repudiandae veniam provident veritatis sit perspiciatis repellendus ad inventore cumque modi neque quia cupiditate blanditiis numquam asperiores, magni officiis itaque dolorum sint. Nulla velit voluptates veniam quam hic tenetur earum exercitationem!
-        <button id="aboutmebtnhide">
+    <div id="aboutmep" class="text-gray-500 text-justify pt-10 ">
+      <div class="py-2">
+        <button class="uppercase text-sky-500">Who am I?</button>
+        <p>My name is Asif Khan. I am a Muslim boy who tries to follow Islam. I am from Bangladesh, which makes me a Bangladeshi Bengali.
+        </p>
+      </div>
+      <div class="py-2">
+        <button class="uppercase text-sky-500">What am I?</button>
+        <p>I am a student, blogger, frontend web developer, digital marketer, tuition teacher, technology nerd, and blogger who tries to learn a new thing every day. Currently, I am learning front-end web development and digital marketing. Apart from this, I know farming and do some cultivation on my land. About my personality, I am an introvert and I do blogging as my hobby.</p>
+      </div>
+      <div class="py-2">
+        <button class="uppercase text-sky-500">My future goals</button>
+        <p>I want to create my own e-commerce website and a job search website to help the unemployed. Also, I want to build an orphanage.
+        </p>
+      </div>
+      <div class="py-2">
+        <button class="uppercase text-sky-500">Language I know</button>
+        <p>• Bangla - Native <br>
+          • English - Limited Working Proficiency. <br>
+          • Hindi - Basic speaking and listening <br>
+          • Spanish - Learning
+        </p>
+          <p>
+          Being a Bangladeshi Bengali my mother tongue is Bengali. Since English is an international language, I am trying to become fairly proficient in English and know working English. I know some Hindi, and now I am trying to learn Spanish.</p>
+      </div>
+      <div class="py-2">
+        <button class="uppercase text-sky-500">System and machine I use</button>
+        <p>Samsung Galaxy A20s <br>
+          Windows 10 Enterprise <br>
+          MSI H61M-P31/G3 MS-7788 <br>
+          Intel Core i3-2120 CPU @ 3.3GHz <br>
+          4 GB 1333 DDR3 Ram</p>
+      </div>
+      <div class="py-2">
+        <button class="uppercase text-sky-500">My hobby</button>
+        <p>Gardening, Comic reading, coding.</p>
+      </div>
+      <div class="py-2">
+        <p class="uppercase text-sky-500">My favorite</p>
+        <p><b class="text-gray-900"> Book:</b> Robinson Crusoe, Les Misérables. <br>
+          <b class="text-gray-900">Live-action movies:</b> Batman Begins, The Dark Knight, Inception, Captain America winter soldier, Avengers infinity war <br> 
+          <b class="text-gray-900">Animated movies:</b> Batman bad blood, Batman vs robin, The Lion King <br>
+          <b class="text-gray-900">Anime:</b> Your name <br>
+          <b class="text-gray-900">fictional characters:</b> Batman, Green Arrow, Moon knight, Bugs Bunny, Ra's Al Ghul, Iron Man, John Constantine, Sherlock Holmes,  superman, Tom, and Jerry.
+          </p>
+      </div>
+      <button id="aboutmebtnhide">
           <p class="text-sky-500">see less</p>
         </button>
-      </p>
     </div>
   </section>
   <!-- education -->
