added google verification

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="google-site-verification" content="AU9nHsf7TX4VMwYIoG-utT2CC9zXOanagAVmObQ_A80" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <title>Asif Khan</title>
   <!-- font -->
