hidden add to profile

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </div>
       </div>
     </div>
-    <div id="aboutmep" class="text-gray-500 text-justify pt-10 ">
+    <div id="aboutmep" class="text-gray-500 text-justify pt-10 hidden">
       <div class="py-2">
         <button class="uppercase text-sky-500">Who am I?</button>
         <p>My name is Asif Khan. I am a Muslim boy who tries to follow Islam. I am from Bangladesh, which makes me a Bangladeshi Bengali.
