--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
           <div class="max-w-[700px] mx-auto">
 
             <!-- form -->
-            <form action="https://formsubmit.co/thewolion@gmail.com">
+            <form action="https://formsubmit.co/thewolion@gmail.com" method="POST">
 
               <div class="form-group mb-6">
                 <input type="text" class="form-control block
