--- a/index.html
+++ b/index.html
@@ -809,6 +809,8 @@
             <form action="https://formsubmit.co/eaae23780767c1e33bdf37296fc44d47" method="POST">
               <input type="text" name="_honey" style="display:none">
               <input type="hidden" name="_captcha" value="false">
+              <input type="hidden" name="_next" value="https://wolionknight.github.io/asifkhan.github.io/">
+
               <div class="form-group mb-6">
                 <input type="text" class="form-control block
               w-full
