--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
             <form action="https://formsubmit.co/eaae23780767c1e33bdf37296fc44d47" method="POST">
               <input type="text" name="_honey" style="display:none">
               <input type="hidden" name="_captcha" value="false">
-              <input type="hidden" name="_next" value="https://wolionknight.github.io/asifkhan.github.io/">
+              <input type="hidden" name="_next" value="https://wolionknight.github.io/asifkhan.github.io/contact.html">
 
               <div class="form-group mb-6">
                 <input type="text" class="form-control block
@@ -826,7 +826,7 @@
               ease-in-out
               m-0
               focus:text-gray-700 focus:bg-white focus:border-sky-500 focus:outline-none" id="name"
-                  placeholder="Name" name="name">
+                  placeholder="Name" name="name" required>
               </div>
 
               <div class="form-group mb-6">
@@ -844,7 +844,7 @@
               ease-in-out
               m-0
               focus:text-gray-700 focus:bg-white focus:border-sky-500 focus:outline-none" id="email"
-                  placeholder="Email address" name="email">
+                  placeholder="Email address" name="email" required>
               </div>
 
               <div class="form-group mb-6">
@@ -883,7 +883,7 @@
               ease-in-out
               m-0
               focus:text-gray-700 focus:bg-white focus:border-sky-500 focus:outline-none
-            " id="message" rows="3" placeholder="Message" name="message"></textarea>
+            " id="message" rows="3" placeholder="Message" name="message" required></textarea>
               </div>
 
               <!-- <div class="form-group form-check text-center mb-6">
