--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="keywords" content="web developer,Asif Khan, the wolion, Html, css, Digital marketing">
+  <meta name="author" content="Asif Khan">  
+  <meta name="description" content="Asif Khan is a front-end web developer, blogger, and digital marketer. He helps people who want to make their business an actual commercial success.">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="google-site-verification" content="AU9nHsf7TX4VMwYIoG-utT2CC9zXOanagAVmObQ_A80" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
