added achievements and footer improved

--- a/index.html
+++ b/index.html
@@ -727,11 +727,11 @@
             </span>
           </li>
           <li class="w-full md:w-1/2 pt-5 justify-center grid text-center mx-2">
-            <p>PLace</p>
+            <p>High School</p>
             <span class="grid border-2 border-white hover:bg-white hover:text-sky-500 p-5">
-              <p>Will be added in the future. </p>
-              <p>--</p>
-              <p>--</p>
+              <p>Best performance in exams</p>
+              <p>(2014-18)</p>
+              <p>Tanore Pilot Model High School</p>
             </span>
           </li>
           <li class="w-full md:w-1/2 pt-5 justify-center grid text-center mx-2">
@@ -1055,16 +1055,16 @@
               Hire Me at
             </h6>
             <p class="mb-4">
-              <a href="#!" class="text-white">Email</a>
+              <a href="mailto:thewolion@gmail.com" class="text-white">Email</a>
             </p>
             <p class="mb-4">
-              <a href="#!" class="text-white">Messenger</a>
+              <a href="http://m.me/nationalasif" target="_blank" rel="noopener noreferrer">Messenger</a>
             </p>
             <p class="mb-4">
-              <a href="#!" class="text-white">instagram</a>
+              <a href="https://www.instagram.com/wolion1/" class="text-white">instagram</a>
             </p>
             <p>
-              <a href="#!" class="text-white">Telegram</a>
+              <a href="https://asifnational.blogspot.com" class="text-white">My Blogs</a>
             </p>
           </div>
           <div class="">
