added shop section and reels

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <ion-icon name="finger-print-outline"></ion-icon>
           </button>
         </div>
-        <nav id="menubar" class="menubarback hidden fixed md:flex md:bg-transparent text-lg bg-sky-400 w-full">
+        <nav id="menubar" class="menubarback mr-5 hidden fixed md:flex md:bg-transparent text-lg bg-sky-400 w-full">
           <ul class="capitalize grid px-10 py-5 md:flex md:space-x-5">
             <li class=" flex justify-between md:hidden" id="toggleback">
               <div id="brand">
@@ -79,6 +79,13 @@
             <li class="textnav border-transparent border-b-2 hover:border-sky-500"><a
                 href="#achievement">achievement</a></li>
             <li class="textnav border-transparent border-b-2 hover:border-sky-500"><a href="#contact">Contact</a></li>
+            <li class="textnav border-transparent border-b-2 hover:border-sky-500"><a href="#contact">
+              <a href="shop.html" class="flex space-x-1 items-center justify-center">
+                <ion-icon name="cart-outline"></ion-icon>
+                <p>Cart</p>
+              </a>
+              </a>
+          </li>
           </ul>
         </nav>
 
